--- a/package.json
+++ b/package.json
@@ -11,13 +11,18 @@
   "dependencies": {
     "@types/body-parser": "^1.16.8",
     "@types/express": "^4.11.1",
+    "@types/jsonwebtoken": "^7.2.6",
     "@types/lodash": "^4.14.105",
     "@types/mongodb": "^3.0.7",
     "@types/mongoose": "^5.0.7",
+    "@types/npm": "^2.0.29",
     "body-parser": "^1.18.2",
+    "crypto-js": "^3.1.9-1",
     "express": "^4.16.3",
+    "jsonwebtoken": "^8.2.0",
     "lodash": "^4.17.5",
     "mongodb": "^3.0.4",
-    "mongoose": "^5.0.11"
+    "mongoose": "^5.0.11",
+    "validator": "^9.4.1"
   }
 }
